--- a/.github/workflows/utitcase.yml
+++ b/.github/workflows/utitcase.yml
@@ -62,7 +62,8 @@ jobs:
           echo "JVM timezone is set to $jvm_timezone"
           
           TEST_MODULES="!paimon-e2e-tests,"
-          for suffix in 3.5 3.4 3.3 3.2 ut; do
+          scala_version=2.12
+          for suffix in ut 3.5_${scala_version} 3.4_${scala_version} 3.3_${scala_version} 3.2_${scala_version}; do
             TEST_MODULES+="!org.apache.paimon:paimon-spark-${suffix},"
           done
           TEST_MODULES="${TEST_MODULES%,}"
