--- a/paimon-spark/paimon-spark-4.0/pom.xml
+++ b/paimon-spark/paimon-spark-4.0/pom.xml
@@ -28,8 +28,8 @@ under the License.
         <version>1.4-SNAPSHOT</version>
     </parent>
 
-    <artifactId>paimon-spark-4.0_${scala.binary.version}</artifactId>
-    <name>Paimon : Spark : 4.0 : ${scala.binary.version}</name>
+    <artifactId>paimon-spark-4.0_2.13</artifactId>
+    <name>Paimon : Spark : 4.0 : 2.13</name>
 
     <properties>
         <spark.version>4.0.1</spark.version>
