--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -26,9 +26,6 @@ on:
       - '!**/*.md'
       - '.github/workflows/paimon-python-checks.yml'
 
-env:
-  PYTHON_VERSION: "3.10"
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.event.number || github.run_id }}
   cancel-in-progress: true
@@ -36,17 +33,82 @@ concurrency:
 jobs:
   lint-python:
     runs-on: ubuntu-latest
+    # Use official python:3.6.15 container; no need to install via setup-python inside
+    container: python:3.6.15
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install dependencies
+        uses: actions/checkout@v3
+
+      - name: Show Python version
         run: |
-          python -m pip install -q readerwriterlock==1.0.9 fsspec==2024.3.1 cachetools==5.3.3 ossfs==2023.12.0 ray==2.48.0 fastavro==1.11.1 pyarrow==16.0.0 zstandard==0.24.0 polars==1.32.0 duckdb==1.3.2 numpy==1.24.3 pandas==2.0.3 flake8==4.0.1 pytest~=7.0 py4j==0.10.9.9 requests 2>&1 >/dev/null
+          python --version
+          which python
+          pip --version || true
+
+      - name: Pin legacy build tooling for py3.6
+        env:
+          PIP_NO_CACHE_DIR: 1
+        run: |
+          # Last pip that supports Python 3.6 is 21.2.4.
+          # setuptools 59.6.0 and wheel 0.38.4 still work with 3.6.
+          /usr/local/bin/python -m pip install --upgrade \
+            "pip==21.3.1" \
+            "setuptools==59.6.0" \
+            "wheel==0.37.1"
+          pip --version
+          python -m pip debug --verbose
+
+      - name: Install system build deps (container runs as root; no sudo required)
+        run: |
+          apt-get update
+          DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+            build-essential \
+            pkg-config \
+            curl \
+            ca-certificates
+          rm -rf /var/lib/apt/lists/*
+          
+      - name: Install Python dependencies (pin to py3.6-compatible versions)
+        env:
+          PIP_NO_CACHE_DIR: 1
+          PIP_DISABLE_PIP_VERSION_CHECK: 1
+          PIP_ROOT_USER_ACTION: ignore
+        run: |
+          # Core libs (last Py3.6-compatible)
+          python -m pip install "numpy==1.19.5" --only-binary=:all:
+          python -m pip install "pandas==1.1.5" --only-binary=:all:
+
+          # Try pyarrow 6.0.1 then 6.0.0; only warn if both fail
+          if ! python -m pip install "pyarrow==6.0.1" --only-binary=:all: ; then
+            if ! python -m pip install "pyarrow==6.0.0" --only-binary=:all: ; then
+              echo "PyArrow wheel not available for this platform."
+            fi
+          fi
+
+          # Other libs pinned to Py3.6
+          python -m pip install \
+            "readerwriterlock==1.0.9" \
+            "fsspec==2021.10.1" \
+            "cachetools==4.2.4" \
+            "ossfs==2021.8.0" \
+            "fastavro==1.4.7" \
+            "zstandard==0.15.2" \
+            "flake8==4.0.1" \
+            "pytest==6.2.5" \
+            "py4j==0.10.9.9" \
+            "requests<3" \
+            "dataclasses==0.8"
+
+          # Polars is not really supported on Py3.6 — make it optional
+          if ! python -m pip install "polars==0.7.2" --only-binary=:all: ; then
+            echo "Polars is not available for Python 3.6; skipping."
+          fi
+
+          # These projects dropped Py3.6 support; attempt install, skip if fails
+          python -m pip install "duckdb==0.5.1" --only-binary=:all: || echo "DuckDB installation failed (expected on py3.6)."
+          python -m pip install "ray==1.13.0" || echo "Ray installation failed (expected on py3.6)."
+
       - name: Run lint-python.sh
         run: |
           chmod +x paimon-python/dev/lint-python.sh
