--- a/paimon-spark/pom.xml
+++ b/paimon-spark/pom.xml
@@ -58,6 +58,10 @@ under the License.
                         <groupId>org.apache.hadoop</groupId>
                         <artifactId>hadoop-common</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-lang3</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 
