--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -96,6 +96,7 @@ jobs:
             "zstandard==0.15.2" \
             "flake8==4.0.1" \
             "pytest==6.2.5" \
+            "polars==0.9.12" \
             "py4j==0.10.9.9" \
             "requests<3" \
             "dataclasses==0.8"
