--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -q readerwriterlock==1.0.9 fsspec==2024.3.1 cachetools==5.3.3 ossfs==2023.12.0 ray==2.48.0 fastavro==1.11.1 pyarrow==16.0.0 zstandard==0.24.0 polars==1.32.0 duckdb==1.3.2 numpy==1.24.3 pandas==2.0.3 flake8==4.0.1 pytest~=7.0 py4j==0.10.9.9 requests 2>&1 >/dev/null
+          git clone https://github.com/apache/paimon-python.git /tmp/paimon-python-old
       - name: Run lint-python.sh
         run: |
           chmod +x paimon-python/dev/lint-python.sh
