--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -27,7 +27,7 @@ on:
       - '.github/workflows/paimon-python-checks.yml'
 
 env:
-  PYTHON_VERSIONS: "['3.9', '3.10']"
+  PYTHON_VERSIONS: "['3.6.15', '3.10']"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.event.number || github.run_id }}
@@ -35,10 +35,14 @@ concurrency:
 
 jobs:
   lint-python:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.6, 3.9, '3.10']
+        include:
+          - python-version: '3.6.15'
+            os: ubuntu-20.04
+          - python-version: '3.10'
+            os: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -49,7 +53,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          if [[ "${{ matrix.python-version }}" == "3.6" ]]; then
+          if [[ "${{ matrix.python-version }}" == "3.6.15" ]]; then
             python -m pip install -q readerwriterlock==1.0.9 'fsspec==2021.10.1' 'cachetools==4.2.4' 'ossfs==2021.8.0' pyarrow==6.0.1 pandas==1.1.5 'polars==0.9.12' 'fastavro==1.4.7' zstandard==0.19.0 dataclasses==0.8.0 pip==21.3.1 flake8 pytest py4j==0.10.9.9 requests 2>&1 >/dev/null
           else
             python -m pip install -q readerwriterlock==1.0.9 fsspec==2024.3.1 cachetools==5.3.3 ossfs==2023.12.0 ray==2.48.0 fastavro==1.11.1 pyarrow==16.0.0 zstandard==0.24.0 polars==1.32.0 duckdb==1.3.2 numpy==1.24.3 pandas==2.0.3 flake8==4.0.1 pytest~=7.0 py4j==0.10.9.9 requests 2>&1 >/dev/null
