--- a/.github/workflows/paimon-python-checks.yml
+++ b/.github/workflows/paimon-python-checks.yml
@@ -20,6 +20,10 @@ name: Check Code Style and Test
 
 on:
   push:
+    paths:
+      - 'paimon-python/**'
+      - '!**/*.md'
+      - '.github/workflows/paimon-python-checks.yml'
   pull_request:
     paths:
       - 'paimon-python/**'
@@ -27,7 +31,7 @@ on:
       - '.github/workflows/paimon-python-checks.yml'
 
 env:
-  PYTHON_VERSION: "3.10"
+  PYTHON_VERSIONS: "['3.6.15', '3.10']"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.event.number || github.run_id }}
@@ -36,18 +40,40 @@ concurrency:
 jobs:
   lint-python:
     runs-on: ubuntu-latest
+    container: "python:${{ matrix.python-version }}-slim"
+    strategy:
+      matrix:
+        python-version: ['3.6.15', '3.10']
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install dependencies
+
+      - name: Install system dependencies
+        shell: bash
         run: |
-          python -m pip install -q readerwriterlock==1.0.9 fsspec==2024.3.1 cachetools==5.3.3 ossfs==2023.12.0 ray==2.48.0 fastavro==1.11.1 pyarrow==16.0.0 zstandard==0.24.0 polars==1.32.0 duckdb==1.3.2 numpy==1.24.3 pandas==2.0.3 flake8==4.0.1 pytest~=7.0 py4j==0.10.9.9 requests 2>&1 >/dev/null
+          apt-get update && apt-get install -y \
+            build-essential \
+            git \
+            curl \
+            && rm -rf /var/lib/apt/lists/*
+
+      - name: Verify Python version
+        run: python --version
+
+      - name: Install Python dependencies
+        shell: bash
+        run: |
+          if [[ "${{ matrix.python-version }}" == "3.6.15" ]]; then
+            python -m pip install --upgrade pip==21.3.1
+            python --version
+            python -m pip install -q readerwriterlock==1.0.9 'fsspec==2021.10.1' 'cachetools==4.2.4' 'ossfs==2021.8.0' pyarrow==6.0.1 pandas==1.1.5 'polars==0.9.12' 'fastavro==1.4.7' zstandard==0.19.0 dataclasses==0.8.0 flake8 pytest py4j==0.10.9.9 requests 2>&1 >/dev/null
+          else
+            python -m pip install --upgrade pip
+            python -m pip install -q readerwriterlock==1.0.9 fsspec==2024.3.1 cachetools==5.3.3 ossfs==2023.12.0 ray==2.48.0 fastavro==1.11.1 pyarrow==16.0.0 zstandard==0.24.0 polars==1.32.0 duckdb==1.3.2 numpy==1.24.3 pandas==2.0.3 flake8==4.0.1 pytest~=7.0 py4j==0.10.9.9 requests 2>&1 >/dev/null
+          fi
       - name: Run lint-python.sh
+        shell: bash
         run: |
           chmod +x paimon-python/dev/lint-python.sh
           ./paimon-python/dev/lint-python.sh
